--- a/talltube.html
+++ b/talltube.html
@@ -19,11 +19,11 @@
 <b>StretchSite:</b> Play YouTube Videos in the Correct Aspect Ratio
 </p>
 
-  {{> hello}}
+  {{> main}}
 
 </body>
 
-<template name="hello">
+<template name="main">
   <br>
   <input id="videourl" placeholder="Paste YouTube link">
   <br>
