--- a/stretchsite.html
+++ b/stretchsite.html
@@ -40,7 +40,7 @@
   <iframe id='thevideo' src="" frameborder="0" allowfullscreen></iframe>
 
   <p class='footer'>
-  Please email feedback to <a href='mailto:doug@stretch.site'>doug@stretch.site</a>. Thanks for using StretchSite.
+  Please email feedback to <a href='mailto:doug@stretch.site'>doug@stretch.site</a>. 
   </p>
 
 </template>
