--- a/stretchsite.html
+++ b/stretchsite.html
@@ -15,32 +15,33 @@
 
 <body>
 
-<p style="width:450px; margin:0 auto">
-<b>StretchSite:</b> Play YouTube Videos in the Correct Aspect Ratio
-</p>
-
   {{> main}}
 
 </body>
 
 <template name="main">
-  <br>
-  <input id="videourl" placeholder="Paste YouTube link">
-  <br>
-  
-  <div class="settings">
-    <button data-scale="0.75">16:9 -> 4:3</button>
-    <button data-scale="1.333333333">4:3 -> 16:9</button>
-    <input id="scale" type='range' min=-1 max=1 step=0.01 value=0>
-    <input id="zoom" type='range' min=-0.6 max=0.6 step=0.01 value=0>
-  </div>
+  <div class='content'>
+    <p style="width:450px; margin:0 auto">
+    <b>StretchSite:</b> Play YouTube Videos in the Correct Aspect Ratio
+    </p>
+    <br>
+    <input id="videourl" placeholder="Paste YouTube link">
+    <br>
 
-  <br>
+    <div class="settings">
+      <button data-scale="0.75">16:9 -> 4:3</button>
+      <button data-scale="1.333333333">4:3 -> 16:9</button>
+      <input id="scale" type='range' min=-1 max=1 step=0.01 value=0>
+      <input id="zoom" type='range' min=-0.6 max=0.6 step=0.01 value=0>
+    </div>
+
+    <br>
+    <p class='footer'>
+    Please email feedback to <a href='mailto:doug@stretch.site'>doug@stretch.site</a>.
+    </p>
+  </div>
 
   <iframe id='thevideo' src="" frameborder="0" allowfullscreen></iframe>
 
-  <p class='footer'>
-  Please email feedback to <a href='mailto:doug@stretch.site'>doug@stretch.site</a>. 
-  </p>
 
 </template>
