--- a/stretchsite.html
+++ b/stretchsite.html
@@ -35,11 +35,19 @@
       <input id="zoom" type='range' min=-0.3 max=0.9 step=0.01 value=0>
     </div>
 
+
     <br>
     <p class='footer'>
     Please email feedback to <a href='mailto:doug@stretch.site'>doug@stretch.site</a>.
     </p>
   </div>
+
+  <div id="ad" style="position:absolute;bottom:100px;width:30%;left:35%;text-align:center;background-color:#333;border-radius:20px">
+
+    <p style="position:absolute;top:-40px;text-shadow: 2px 2px #000000;left:-10px;transform:rotate(-45deg);color:white;font-family:monospace;font-size:30px">AD</p>
+  <p>Save time & money when you ride by comparing<br><b>Uber</b> and <b>Lyft</b> with my new app: <a style="color:white" href="https://anyrideapp.com?ref=stretchsite">Anyride</a></p>
+  </div>
+
 
   <iframe id='thevideo' src="" frameborder="0" allowfullscreen></iframe>
 
