migrate to js and allow keyboard shortcuts "passed in" to the pleyer

--- a/stretchsite.html
+++ b/stretchsite.html
@@ -11,6 +11,8 @@
   ga('create', 'UA-23141447-3', 'auto');
   ga('send', 'pageview');
   </script>
+
+  <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 
 <body>
