add more instructions

--- a/stretchsite.html
+++ b/stretchsite.html
@@ -23,8 +23,11 @@
 
 <template name="main">
   <div class='content'>
-    <p style="width:450px; margin:0 auto">
+    <p style="width:35%; margin:0 auto">
     <b>StretchSite:</b> Play YouTube Videos in the Correct Aspect Ratio
+    <br>
+    <br>Use buttons or first slider to fix video. 
+    <br>Use second slider and your browser's fullscreen feature to maximize the video.
     </p>
     <br>
     <input id="videourl" placeholder="Paste YouTube link">
